web_ui_2: corrects spacing for date separator

--- a/stylus/framework/chat-content.styl
+++ b/stylus/framework/chat-content.styl
@@ -541,7 +541,7 @@ span.author-deleted
 	position: relative
 	height: 30px
 	padding: 5px 0 0 0
-	margin: 0 30px 20px 20px
+	margin: 0 20px 20px
 	span
 		color: #666
 		font-weight: 600
